objects/Finalized_Deal_NSA_Request__c.object
<CustomObject>
    <description>Finalized Deal NSA request. BDC Communication Project</description>
    <fields>
        <fullName>AVP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AVP</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Finalized_Deal_NSA_Request2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Deal_State__r.Account__c</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitive_Situation__c</fullName>
        <label>Competitive Situation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DOS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DOS</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Finalized_Deal_NSA_Request1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deal_State__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deal State</label>
        <referenceTo>Deal_State__c</referenceTo>
        <relationshipLabel>Finalized Deal NSA Request</relationshipLabel>
        <relationshipName>Finalized_Deal_NSA_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Link_To_SQT_Deal__c</fullName>
        <formula>hyperlink(&quot;http://&quot; &amp; $Setup.CustomSettings__c.SQTServer__c &amp; &quot;Home.aspx?DealID=&quot; &amp;  Deal_State__r.SQT_Deal_ID__c, &quot;_blank&quot;)</formula>
        <label>Link To SQT Deal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RGM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RGM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Finalized_Deal_NSA_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Finalized Deal NSA Request</label>
    <nameField>
        <displayFormat>FDNR-{00000}</displayFormat>
        <label>Finalized Deal NSA Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Finalized Deal NSA Request</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>